ADD GEM SPEC, FILL PROFILE
Add wdm to Gemfile

Add Name, Location

Insert links to social media accounts (Twitter, GitHub, LinkedIn

--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Walaza Nguluwe"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  location         : "Huddersfield, UK"
   email            :
   links:
     - label: "Email"
@@ -107,16 +107,19 @@ author:
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://twitter.com/WalazaNguluwe"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://twitter.com/WalazaNguluwe"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/walaza-nguluwe-3b9056a6/"
 
 # Site Footer
 footer:
