--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : "googled45de1d17004f45a.html"
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
@@ -128,7 +128,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: https://twitter.com/WalazaNguluwe
+      url: "https://twitter.com/WalazaNguluwe"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
